# github-runner-ec2-attestation

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
.github/docker/: Dockerfile.kiwi-builder
.github/scripts/: build-kiwi-image.sh
.github/workflows/: build-attestable-image.yml  build-attestable-image.yml.bak
.kiro/specs/github-actions-remote-executor/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: protected-directories.md
kiwi-descriptions/: add-gpg-key.sh  appliance.kiwi  config.sh  edit_boot_install.sh
scripts/: build-ami.py  cleanup.py  deploy.py
src/: __init__.py  attestation.py  config.py  execution_manager.py  logging_config.py  main.py  models.py  output_collector.py  repository.py  script_executor.py  server.py  validation.py
terraform/build-ami/: main.tf  outputs.tf  variables.tf
terraform/deploy/: main.tf  outputs.tf  variables.tf
tests/: test_artifact_publishing_properties.py  test_attestation.py  test_attestation_properties.py  test_config.py  test_config_properties.py  test_execution_manager.py  test_execution_manager_properties.py  test_health_metrics_properties.py  test_health_metrics_unit.py  test_integration.py  test_kiwi_build_properties.py  test_logging_error_handling_properties.py  test_logging_unit.py  test_models.py  test_output_collector.py  test_output_collector_properties.py  test_repository.py  test_repository_properties.py  test_script_executor.py  test_script_executor_properties.py  test_server_properties.py  test_server_unit.py  test_validation.py  test_validation_properties.py
(+1 files in other folders)
